--- a/offsite.html
+++ b/offsite.html
@@ -51,7 +51,7 @@
 
 
                 <h2> PhegaeriOnline </h2>
-                <h5> แบบขออนุญาตออกนอกสถานที่ในเวลาราชการ </h5>
+                <h5> แบบขออนุญาตออกนอกสถานที่<br>ในเวลาราชการ </h5>
                 <!-- <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5> -->
             </div>
 
@@ -103,8 +103,10 @@
 
                         </div>
                     </div>
+
                     <center>
-                        <p style="font-size:13px; color:red;">** การขออนุญาตใช้สำหรับออกนอกสถานที่ไม่เกิน 4 ชั่วโมง **</p>
+                        <p style="font-size:13px; color:red;">** การขออนุญาตใช้สำหรับออกนอกสถานที่ไม่เกิน 4 ชั่วโมง **
+                        </p>
                     </center>
 
                     <div class="form-group row">
@@ -159,21 +161,25 @@
                         </div>
                     </div>
 
+                    <!-- 
+                    <center>
+                        <p style="font-size:13px; color:red;">- พนักงานทุกท่านให้เลือก นายณัฐสิทธิ์ อยู่เย็น
+                            เป็นหัวหน้างาน<br>- วิศวกรรมทุกท่านให้เลือก นายอนุชิต ฉ่ำสิงห์
+                            เป็นหัวหน้างาน
+                        </p>
+                    </center>
+                    -->
+
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">หัวหน้างาน</label>
                         <div class="col-sm-8">
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="ran7" name="หัวหน้างาน" placeholder=""
                                 required="required">
-                                <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
+                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
                                 <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
                                 <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
-                                <option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
-                                <option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
-                                <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
-                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
-                                <option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
-
+                                <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                             </select>
                         </div>
                     </div>
