--- a/leave-sick.html
+++ b/leave-sick.html
@@ -27,59 +27,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
-
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
-
-
-
-    <!-- ************************   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
-
-
-    <!-- <style>
-        /* Chrome, Safari, Edge, Opera */
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        /* Firefox */
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-    </style> -->
 
 </head>
 
 <body class="login-page"
     style="background-repeat: no-repeat; background-size: cover; background-position: center center; min-height: 1200px;">
 
-
-
-
-
     <!-- Class ลงชื่อเข้าใช้งาน -->
     <div class="login-box">
         <div class="card">
-
             <div class="login-logo">
                 <div>
                     <img class="mb-4 mt-3" src="img/doaweb.png" alt="" width="80" height="80">
                 </div>
-
-
                 <h2> PhegaeriOnline </h2>
                 <h5> แบบฟอร์ม ใบลาป่วย / ใบลากิจ</h5>
-                <!-- <h5> ชื่อผู้ใช้งาน <h5 id="name">Username</h5> -->
             </div>
 
-
-
-
+            <div class="card-body login-card-body">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <th scope="row">มีวันลาป่วยและลากิจรวมกัน ไม่เกิน</th>
+                            <td align="right" id="swuserday">- วัน</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">ลาป่วยไปแล้ว</th>
+                            <td align="right" id="swuser1">- วัน</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">ลากิจไปแล้ว</th>
+                            <td align="right" id="swuser2">- วัน</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <div class="card-body login-card-body">
                 <form method="post" name="formleavesick" id="formleavesick">
@@ -181,9 +166,9 @@
                             <select type="text" class="form-control" id="ran8" name="ผู้อนุมัติ" placeholder=""
                                 required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
-                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ
+                                <option value="ป-นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ
                                     ไชยศรีชลธาร (ปฏิบัติราชการแทน)</option>
-                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)
+                                <option value="ป-นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)
                                 </option>
                                 <option value="ป-นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล (ปฏิบัติราชการแทน)
                                 </option>
@@ -209,134 +194,19 @@
                         </div>
                     </div>
 
-                    <!-- ***สำเนา**
+                    <p style="font-size:13px; color:red;"> *** การบันทึกข้อมูลจะใช้เวลาประมาณ 10
+                        วินาที กรุณารอสักครู่เมื่อเสร็จแล้วจะมีข้อความแจ้งเตือน ***</p>
+
                     <div class="col-12 mt-3">
-                        <button id="" class="btn btn-warning btn-block " type="submit" name="FormleavesickButton"
+                        <button id="" class="btn btn-success  btn-block " type="submit" name="submit"
                             style="margin-bottom: 5px;"><i class="fas fa-sign-out-alt"></i>
                             บันทึกข้อมูล</button>
-                    </div> -->
-
-                    <div class="col-12 mt-3">
-                        <button id="" class="btn btn-warning btn-block " onclick="chaaa()" type="button"
-                            name="FormleavesickButton" style="margin-bottom: 5px;" data-bs-target="#myModal"
-                            data-bs-toggle="modal"><i class="fas fa-sign-out-alt"></i>
-                            ส่งข้อมูล</button>
                     </div>
-
-                    <!-- Modal HTML -->
-                    <div id="myModal" class="modal fade" data-bs-backdrop="static" tabindex="-1">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title">ยืนยันข้อมูล</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                </div>
-
-                                <div class="modal-body">
-                                    <p style="color:red;">กรุณาตรวจสอบข้อมูลอีกครั้ง ก่อนกดบันทึกข้อมูล</p>
-                                    <!--<p class="text-secondary"><small>If you don't save, your changes will
-                                            belost.</small></p> -->
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
-                                        <div class="col-sm-8">
-                                            <input type="text" class="form-control" id="rown0" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">วันที่เขียน</label>
-                                        <div class="col-sm-8">
-                                            <input type="date" class="form-control" id="rown1" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ประเภท</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="text" class="form-control" id="rown2" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ลาวันที่</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="date" class="form-control" id="rown3" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ถึงวันที่</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="date" class="form-control" id="rown4" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">มีกำหนด</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="text" class="form-control" id="rown5" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">เนื่องจาก</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="text" class="form-control" id="rown6" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="text" class="form-control" id="rown7" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row">
-                                        <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
-                                        <div class="col-sm-8">
-
-                                            <input type="text" class="form-control" id="rown8" name="-" placeholder=""
-                                                readonly>
-                                        </div>
-                                    </div>
-
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary btn-block "
-                                            data-bs-dismiss="modal">แก้ไข</button>
-
-                                        <button id="" class="btn btn-success  btn-block " type="submit"
-                                            name="FormleavesickButton" style="margin-bottom: 1px;"><i
-                                                class="fas fa-sign-out-alt"></i>บันทึกข้อมูล</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Modal HTML -->
 
                     <div class="col-12 mt-3">
                         <a href="./home.html"><button class="btn btn-light btn-block " type="button"><i
-                                    class="fa fa-bookmark"></i> กลับหน้าเมนู </button></a>
-                    </div>
-
-
+                                    class="fa fa-bookmark"></i>
+                                กลับหน้าเมนู </button></a>
 
                 </form>
             </div>
@@ -350,19 +220,6 @@
     <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
 
-    <script>
-        checkLogin();
-        function checkLogin() {
-            var username = localStorage.getItem("username")
-            if (!username) {
-                window.location = "login.html"
-            }
-            else {
-                //document.getElementById("name").innerHTML = username
-                document.getElementById("log2").value = username
-            }
-        }
-    </script>
 </body>
 
 </html>
