--- a/home.html
+++ b/home.html
@@ -25,21 +25,6 @@
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
-
-
-    <style>
-        /* Chrome, Safari, Edge, Opera */
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        /* Firefox */
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-    </style>
 </head>
 
 <body class="hold-transition login-page"
@@ -86,7 +71,7 @@
 
 
                         <div class="col-12 mt-3">
-                            <a href="offsite.html"><button class="btn btn-secondary btn-block" type="button">
+                            <a href="form-allow-offsite.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> ใบขออนุญาตออกนอกสถานที่ </button></a>
                         </div>
 
