--- a/home.html
+++ b/home.html
@@ -76,6 +76,11 @@
                         </div>
 
                         <div class="col-12 mt-3">
+                            <a href="form-allow-carout.html"><button class="btn btn-secondary btn-block" type="button">
+                                    </i> ใบขออนุญาติให้รถส่วนกลาง </button></a>
+                        </div>
+
+                        <div class="col-12 mt-3">
                             <a href="menu-pdf.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> Drive PDF File </button></a>
                         </div>
