edir user name car-out

--- a/form-allow-carout.html
+++ b/form-allow-carout.html
@@ -84,7 +84,7 @@
                                 <option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
                                 <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
-                                <option value="นายสุรชาติ ระย้าทองห">นายสุรชาติ ระย้าทอง</option>
+                                <option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
                             </select>
                         </div>
                     </div>
